[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield-py"
version = "0.1.0"
description = "Python bindings for PromptShield LLM security framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sameer Alam" }]
keywords = [
    "prompt-injection", "jailbreak", "llm-security", "red-teaming",
    "ai-safety", "prompt-security", "guardrails", "adversarial",
    "security-testing", "content-moderation"
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Crynge/PromptShield"
